--- a/assets/css/fragments/footer.css
+++ b/assets/css/fragments/footer.css
@@ -5,6 +5,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+footer-wave-top{
+    color: #2A2F4F;
+}
+
 /* Main Footer Content */
 .footer-main {
     background: linear-gradient(135deg, #2a2f4f 0%, #4b56d2 100%);
