--- a/assets/css/fragments/footer.css
+++ b/assets/css/fragments/footer.css
@@ -3,13 +3,17 @@
     position: relative;
     color: #fff;
     font-family: "Poppins", sans-serif;
+    margin-top: -1px; /* Fix gap between sections and footer */
 }
 
 .footer-wave-top {
-    color: #2A2F4F;
+    color: #2a2f4f;
     display: block;
     width: 100%;
     line-height: 0;
+    margin-bottom: -5px; /* Fix gap between wave and footer content */
+    position: relative;
+    z-index: 2;
 }
 
 /* Main Footer Content */
@@ -17,6 +21,7 @@
     background: linear-gradient(135deg, #2a2f4f 0%, #4b56d2 100%);
     position: relative;
     overflow: hidden;
+    z-index: 1;
 }
 
 .footer-main::before {
@@ -26,7 +31,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v  fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     opacity: 0.3;
     z-index: 0;
 }
@@ -240,7 +245,11 @@
 }
 
 @keyframes iconBounce {
-    0%, 20%, 50%, 80%, 100% {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
     40% {
