--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,7 +146,9 @@ section {
 .page-content {
     min-height: calc(100vh - var(--navbar-height) - 300px);
     padding-top: calc(var(--navbar-height) + 50px);
-    padding-bottom: 50px;
+    padding-bottom: 100px; /* Increased to ensure dots transition into footer wave */
+    position: relative;
+    z-index: 1;
 }
 
 .page-right {
