--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -287,7 +287,7 @@ section {
 /* Theme Toggle */
 .theme-toggle {
     position: fixed;
-    bottom: 20px;
+    top: 20px;
     right: 20px;
     width: 50px;
     height: 50px;
