--- a/home/fragments/footer.html
+++ b/home/fragments/footer.html
@@ -32,11 +32,11 @@
                 <h3 class="footer-heading">Quick Links</h3>
                 <div class="footer-links">
                     <a href="/" class="footer-link"><i class="fas fa-chevron-right"></i> Home</a>
-                    <a href="/about.html" class="footer-link"><i class="fas fa-chevron-right"></i> About</a>
-                    <a href="/skills.html" class="footer-link"><i class="fas fa-chevron-right"></i> Skills</a>
-                    <a href="/experience.html" class="footer-link"><i class="fas fa-chevron-right"></i> Experience</a>
-                    <a href="/projects.html" class="footer-link"><i class="fas fa-chevron-right"></i> Projects</a>
-                    <a href="/contact.html" class="footer-link"><i class="fas fa-chevron-right"></i> Contact</a>
+                    <a href="/home/about.html" class="footer-link"><i class="fas fa-chevron-right"></i> About</a>
+                    <a href="/home/skills.html" class="footer-link"><i class="fas fa-chevron-right"></i> Skills</a>
+                    <a href="/home/experience.html" class="footer-link"><i class="fas fa-chevron-right"></i> Experience</a>
+                    <a href="/home/projects.html" class="footer-link"><i class="fas fa-chevron-right"></i> Projects</a>
+                    <a href="/home/contact.html" class="footer-link"><i class="fas fa-chevron-right"></i> Contact</a>
                 </div>
             </div>
             <div class="footer-social">
@@ -70,7 +70,9 @@
                 <p class="newsletter-text">Subscribe to my newsletter to receive updates on my latest projects and tech articles.</p>
                 <form class="newsletter-form">
                     <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
+                        <label>
+                            <input type="email" placeholder="Your Email" required>
+                        </label>
                         <button type="submit"><i class="fas fa-paper-plane"></i></button>
                     </div>
                 </form>
