--- a/home/fragments/navbar.html
+++ b/home/fragments/navbar.html
@@ -1,11 +1,11 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a href="/" class="logo">
+    <a href="/index.html" class="logo">
       <span class="logo-text">Suhrob</span>
       <span class="logo-dot"></span>
     </a>
     <div class="nav-links">
-      <a href="/" class="nav-link">
+      <a href="/index.html" class="nav-link">
         <span class="nav-icon"><i class="fas fa-home"></i></span>
         <span class="nav-text">Home</span>
       </a>
