--- a/assets/css/loading-animation.css
+++ b/assets/css/loading-animation.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: linear-gradient(135deg, #121212 0%, #2a2f4f 100%);
     display: flex;
     justify-content: center;
